# shihuaidexianyu.github.io

./: .gitignore  404.html  README.md  book.toml  index.html  index.xml  main.py  mkdocs.yml  package-lock.json  package.json  postscript.js  preprocess.py  pyproject.toml  sitemap.xml  skip_list.txt  tags.html
Archive/: index.html  prompt.html  离散数学基础.html  认知心理学.html
core/: index.md
prompt/: index.html  note-fix-system.html  p3.html  prompt1.html  prompt2.html  笔记生成.html
src/: SUMMARY.md  about.md  rust.md
static/: contentIndex.json
tags/: index.html
template/: index.html  template1.html
人工智能/: index.html
基础知识/: index.html
小技巧/: index.html  word.html
工具/: docker.html  git.html  index.html  its.html  makefile.html  slurm.html  ssh.html  starship.html  tmux.html  ufw.html  uv.html  vim.html  word.html  zsh.html
教程/: index.html  windows配置.html  个人服务器配置.html  服务器上使用codex.html  服务器任务.html
日记/: 2026-02-22.html  2026-02-23.html  2026-02-24.html  2026-02-25.html  2026-02-26.html  2026-02-27.html  2026-02-28.html  2026-03-01.html  2026-03-02.html  2026-03-03.html  2026-03-04.html  2026-03-05.html  2026-03-06.html  2026-03-07.html  2026-03-11.html  2026-03-12.html  2026-03-13.html  2026-03-16.html  2026-03-17.html  2026-03-18.html  index.html
查漏补缺/: KL散度.html  RMSE.html  bootstrap.html  index.html  假设检验.html  常微分方程.html  等比数列.html  范数.html
毕业审查/: index.html  心理学.html  计算机科学与技术（双学位）.html  计算机科学与技术（辅修）.html
科研/: index.html
编程/: AI-Native-架构设计.html  git.html  index.html  matlab.html  pipeline.html  python.html  rust.html  uv配置jupyter.html  前端.html
(+415 files in other folders)
